- WS Plugin: the response list of ListPendingMessages operation can be limited using a new configuration property (domibus.listPendingMessages.maxCount).
- Config: increased the value of the retry tolerance to 3 hours
Domibus 3.2.2
- Possibility to configure the limit of downloaded/not-downloaded messages for the retention worker
- Fixed the notifications sent by the JMS plugin
- Deprecated the method "void messageReceiveFailed(String messageId, String ednpoint)" from the BackendConnector interface and added a new method "void messageReceiveFailed(MessageReceiveFailureEvent messageReceiveFailureEvent)"
- Changed the default JMX password for WebLogic
- Fixed the search of the JMS messages for WebLogic(for JMS messages having property with null values) and Tomcat(for JMS messages with no "Text" property)
- Solved issue related to CXF attachment temp file leakage (for payloads over 200Mb).
- New configuration properties added for ConnectionTimeout and ReceiveTimeout for connection between access points.
- Fixed Domibus integration with SMP/SML
- Fixed bug about the retention (downloaded and undownloaded) parameters. Downloading the message, its status will be set to DOWNLOADED.
- Fixed message cannot be downloaded, when the message retention download is set to 0 and the file storage is used.
Domibus 3.2.1
- JMX access to the JMS queues is secured
- Force the usage of the apache commons IO library from the application
- Possibility to load the logging configuration file from ${domibus.conf.location} for WebLogic/WildFly/Tomcat
Domibus 3.2-FR
- Added authentication/authorization example to the WS default plugin. Disabled by default, to assure backwards compatibility with older versions.
- Added XSD validation of the PMODE when it is uploaded by the user.
- Fixed the filtering and the pagination on the "Message Log" page
- Changed table names to be all UPPERCASE to fix the issue related to case sensitivity on Linux.