@@ -28,14 +28,19 @@ import eu.domibus.common.model.configuration.LegConfiguration;
 import eu.domibus.common.model.configuration.ReceptionAwareness;
 import eu.domibus.common.model.configuration.RetryStrategy;
 import eu.domibus.common.model.logging.UserMessageLog;
+import eu.domibus.ebms3.common.dao.DynamicDiscoveryService;
 import eu.domibus.ebms3.receiver.BackendNotificationService;
 import mockit.*;
 import mockit.integration.junit4.JMockit;
+import no.difi.vefa.edelivery.lookup.model.DocumentIdentifier;
+import no.difi.vefa.edelivery.lookup.model.ParticipantIdentifier;
+import no.difi.vefa.edelivery.lookup.model.ServiceMetadata;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
 import java.util.Date;
+import java.util.Properties;
 import java.util.UUID;
 
 import static org.junit.Assert.assertEquals;
@@ -47,6 +52,8 @@ public class UpdateRetryLoggingServiceTest {
     private static final long SYSTEM_DATE_IN_MILLIS_FIRST_OF_JANUARY_2016 = 1451602800000L; //This is the reference time returned by System.correntTImeMillis() mock
     private static final long FIVE_MINUTES_BEFORE_FIRST_OF_JANUARY_2016 = SYSTEM_DATE_IN_MILLIS_FIRST_OF_JANUARY_2016 - (60 * 5 * 1000);
     private static final long ONE_HOUR_BEFORE_FIRST_OF_JANUARY_2016 = SYSTEM_DATE_IN_MILLIS_FIRST_OF_JANUARY_2016 - (60 * 60 * 1000);
+
+    private static final String DELETE_PAYLOAD_ON_SEND_FAILURE = "domibus.sendMessage.failure.delete.payload";
 
     @Tested
     private UpdateRetryLoggingService updateRetryLoggingService;
@@ -61,6 +68,9 @@ public class UpdateRetryLoggingServiceTest {
     private MessagingDao messagingDao;
 
     private LegConfiguration legConfiguration = new LegConfiguration();
+
+    @Injectable
+    private Properties domibusProperties;
 
     @Before
     public void setupExpectations() {
@@ -97,6 +107,9 @@ public class UpdateRetryLoggingServiceTest {
         userMessageLog.setNotificationStatus(NotificationStatus.REQUIRED);
 
         new Expectations() {{
+            domibusProperties.getProperty(DELETE_PAYLOAD_ON_SEND_FAILURE, "false");
+            result = true;
+
             messageLogDao.findByMessageId(messageId, MSHRole.SENDING);
             result = userMessageLog;
         }};
@@ -106,7 +119,9 @@ public class UpdateRetryLoggingServiceTest {
 
 
         new Verifications() {{
-            messagingDao.delete(messageId, MessageStatus.SEND_FAILURE, NotificationStatus.NOTIFIED);
+            messageLogDao.setAsNotified(messageId);
+            messageLogDao.setMessageAsSendFailure(messageId);
+            messagingDao.clearPayloadData(messageId);
         }};
 
     }
@@ -134,6 +149,9 @@ public class UpdateRetryLoggingServiceTest {
         userMessageLog.setNotificationStatus(NotificationStatus.NOT_REQUIRED);
 
         new Expectations() {{
+            domibusProperties.getProperty(DELETE_PAYLOAD_ON_SEND_FAILURE, "false");
+            result = true;
+
             messageLogDao.findByMessageId(messageId, MSHRole.SENDING);
             result = userMessageLog;
         }};
@@ -169,6 +187,9 @@ public class UpdateRetryLoggingServiceTest {
         userMessageLog.setNotificationStatus(NotificationStatus.REQUIRED);
 
         new Expectations() {{
+            domibusProperties.getProperty(DELETE_PAYLOAD_ON_SEND_FAILURE, "false");
+            result = true;
+
             messageLogDao.findByMessageId(messageId, MSHRole.SENDING);
             result = userMessageLog;
         }};
@@ -178,7 +199,9 @@ public class UpdateRetryLoggingServiceTest {
 
 
         new Verifications() {{
-            messagingDao.delete(messageId, MessageStatus.SEND_FAILURE, NotificationStatus.NOTIFIED);
+            messageLogDao.setAsNotified(messageId);
+            messageLogDao.setMessageAsSendFailure(messageId);
+            messagingDao.clearPayloadData(messageId);
         }};
 
     }
@@ -206,6 +229,9 @@ public class UpdateRetryLoggingServiceTest {
         userMessageLog.setNotificationStatus(NotificationStatus.REQUIRED);
 
         new Expectations() {{
+            domibusProperties.getProperty(DELETE_PAYLOAD_ON_SEND_FAILURE, "false");
+            result = true;
+
             messageLogDao.findByMessageId(messageId, MSHRole.SENDING);
             result = userMessageLog;
         }};
@@ -215,7 +241,9 @@ public class UpdateRetryLoggingServiceTest {
 
 
         new Verifications() {{
-            messagingDao.delete(messageId, MessageStatus.SEND_FAILURE, NotificationStatus.NOTIFIED);
+            messageLogDao.setAsNotified(messageId);
+            messageLogDao.setMessageAsSendFailure(messageId);
+            messagingDao.clearPayloadData(messageId);
         }};
 
     }
